@@ -1,0 +1,40 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- edited with XMLSPY v2004 rel. 4 U (http://www.xmlspy.com) by Paresh Vyas (Lehman Brothers) -->
+<xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+	<xsd:complexType name="TopographyType">
+		<xsd:choice maxOccurs="unbounded">
+			<xsd:element ref="yy"/>
+			<xsd:element name="zz" type="xsd:string"/>
+		</xsd:choice>
+	</xsd:complexType>
+	<xsd:element name="TestTop">
+		<xsd:complexType>
+			<xsd:sequence>
+				<xsd:element name="aa" type="TeaType"/>
+				<xsd:element name="mm" type="MnmType"/>
+			</xsd:sequence>
+			<xsd:attribute name="product" type="ProductEnum"/>
+		</xsd:complexType>
+	</xsd:element>
+	<xsd:complexType name="MnmType">
+		<xsd:sequence>
+			<xsd:element name="gg" type="xsd:string" minOccurs="0"/>
+			<xsd:element name="foo" type="TopographyType" minOccurs="0"/>
+			<xsd:element name="hh" type="xsd:string" minOccurs="0"/>
+		</xsd:sequence>
+	</xsd:complexType>
+	<xsd:complexType name="TeaType">
+		<xsd:sequence>
+			<xsd:element name="cc" type="xsd:string" minOccurs="0"/>
+			<xsd:element name="foo" type="TopographyType" minOccurs="0"/>
+			<xsd:element name="dd" type="xsd:string" minOccurs="0"/>
+		</xsd:sequence>
+	</xsd:complexType>
+	<xsd:element name="yy" type="xsd:string"/>
+	<xsd:simpleType name="ProductEnum">
+		<xsd:restriction base="xsd:string">
+			<xsd:enumeration value="ABC"/>
+			<xsd:enumeration value="DEF"/>
+		</xsd:restriction>
+	</xsd:simpleType>
+</xsd:schema>
